# rush

./: .gitignore  Cargo.toml  Makefile.toml  cargo.toml  test.http  todo.txt
.github/workflows/: general.yml
data_server/: Cargo.toml
data_server/src/: api.rs  main.rs  pipe.rs
data_server/src/db/: admin.rs  initializers.rs  instance.rs  mod.rs
data_server/src/db/assets/: admin.surql  test.surql
data_server/src/models/: mod.rs  object_field.rs  object_table.rs
data_server/test/: login.rs
data_server_v2/: Cargo.toml  configuration.yaml
data_server_v2/config/: config.dev.yaml  config.test.yaml  config.yaml
data_server_v2/http-test/: test.http
data_server_v2/http-test/root-flow/: create-account.http  create-instance.http  test.http
data_server_v2/src/: lib.rs  main.rs  startup.rs
data_server_v2/src/configuration/: app.rs  db.rs  mail.rs  mod.rs
data_server_v2/src/database/: init.rs  mod.rs  util.rs
data_server_v2/src/database/resources/: init-account.surql  init-config.surql  init-confirmation-token.surql  init-db.surql  init-has.surql  init-instance.surql
data_server_v2/src/guards/: instance_filter.rs  mod.rs
data_server_v2/src/mailer/: mod.rs
data_server_v2/src/middleware/: auth.rs  mod.rs
data_server_v2/src/middleware/virtual_hosting/: mod.rs
data_server_v2/src/model/: account.rs  email_address.rs  instance.rs  mod.rs
data_server_v2/src/routes/: instance.rs  mod.rs
data_server_v2/src/services/: error.rs  mod.rs  util.rs
data_server_v2/src/services/instance/: mod.rs
data_server_v2/src/services/root/: account.rs  instance.rs  mod.rs
data_server_v2/src/services/root/account/: confirm.rs  create.rs  mod.rs  signin.rs  signup.rs
data_server_v2/src/telemetry/: mod.rs  terminal_logger.rs
data_server_v2/src/util/: str_util.rs
data_server_v2/tests/: account.rs  create_instance.rs  fakes.rs  health_check.rs  main.rs  signup.rs  util.rs
data_server_v2/tests/root/: account.rs  fakes.rs  health_check.rs  instance.rs  mod.rs
data_server_v2/tests/root/account/: confirm.rs  create.rs  helpers.rs  mod.rs  signin.rs
data_server_v2/user_stories/: prospective_user.md  system_admin.md
shared/: Cargo.toml
shared/src/: lib.rs
ui_server/: Cargo.toml
