[package]
name = "data_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
actix-web = { workspace = true, features = ["macros"] }
futures-util = "0.3.28"
surrealdb = "1.0.0-beta.9"
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
actix = "0.13.0"
actix-rt = "2.8.0"
include_dir = "0.7.3"
