[package]
name = "rush_data_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
opentelemetry = "0.20.0"
opentelemetry-jaeger = { version = "0.19.0", features = [
    "rt-tokio-current-thread",
] }
tracing = "0.1.37"
tracing-actix-web = "0.7.6"
tracing-bunyan-formatter = "0.3.9"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
