[package]
name = "rush_data_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
anyhow = "1.0.75"
chrono = "0.4.31"
claims = "0.7.1"
config = "0.13.3"
futures-util = "0.3.28"
include_dir = "0.7.3"
lettre = { version = "0.11.0", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
] }
once_cell = "1.18.0"
opentelemetry = "0.20.0"
opentelemetry-jaeger = { version = "0.19.0", features = [
    "rt-tokio-current-thread",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
surrealdb = { version = "1.0.0", features = ["kv-mem", "scripting"] }
thiserror = "1.0.49"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.6"
tracing-bunyan-formatter = "0.3.9"
tracing-log = { version = "0.2.0" }
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.10.1"
uuid = "1.4.1"

[dev-dependencies]
fake = { version = "2.8.0", features = ["derive", "dummy", "chrono"] }
get-port = "4.0.0"
linkify = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rush_data_server_bin"

[features]
integration-tests = []

# On Windows
# ```
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview
# ```
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]


# [target.x86_64-pc-windows-gnu]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
# On Linux:
# - Ubuntu, `sudo apt-get install lld clang`
# - Arch, `sudo pacman -S lld clang`
# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
# On MacOS, `brew install llvm` and follow steps in `brew info llvm`
# [target.x86_64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
