[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web ={ version = "4.3.1", features = ["macros"]}
anyhow = "1.0.71"
thiserror = "1.0.40"
tokio = "1.28.2"
tracing = "0.1.37"
